Update index.html back1

--- a/project/index.html
+++ b/project/index.html
@@ -162,7 +162,7 @@
         </footer>
 
         <!-- Back to Top Button -->
-        <a href="javascript/header.js" class="back-to-top">Back to Top</a>
+        <a href="#back-to-top" id "back-to-top" class="back-to-top">Back to Top</a>
     </div>
 
     <script src="javascript/header.js"></script>
